--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
       "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
       "dev:frontend": "npm run dev --workspace=frontend",
       "dev:backend": "npm run dev --workspace=backend",
-      "build": "npm run build --workspace=frontend && npm run build --workspace=backend"
+    "build": "npm run build --workspace=frontend && npm run build --workspace=backend",
+    "start": "NODE_ENV=production concurrently \"npm run start:frontend\" \"npm run start:backend\"",
+    "start:frontend": "npm run start --workspace=frontend -- --port 8080 --hostname 0.0.0.0",
+    "start:backend": "PORT=5000 npm run start --workspace=backend"
     },
-    "devDependencies": {
-      "concurrently": "^8.2.0"
-    }
+  "dependencies": {
+    "concurrently": "^8.2.0"
+  }
   }
