--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -14,6 +14,7 @@ FROM base AS build
 WORKDIR /app
 ENV NEXT_PUBLIC_API_URL=/api
 ENV NEXT_PUBLIC_API_BASE_URL=/api
+ENV INTERNAL_API_URL=https://deedeeshealthandwellness-backend.fly.dev
 COPY --from=deps /app/node_modules ./node_modules
 COPY --from=deps /app/frontend/node_modules ./frontend/node_modules
 COPY . .
