--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
         "react-query": "^3.0.0",
         "recharts": "^2.0.0",
         "sharp": "^0.34.5",
+        "swr": "^2.3.7",
         "tailwindcss": "^3.3.0",
         "zod": "^3.0.0",
         "zustand": "^4.0.0"
